tests/ui/sized-hierarchy/pretty-print.future.stderr
error[E0119]: conflicting implementations of trait `SizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:23:1
   |
LL | impl<T: Sized> SizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> SizedTr for T
             where T: Sized;

error[E0119]: conflicting implementations of trait `MetaSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:30:1
   |
LL | impl<T: MetaSized> MetaSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> MetaSizedTr for T
             where T: MetaSized;

error[E0119]: conflicting implementations of trait `PointeeSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:33:1
   |
LL | impl<T: PointeeSized> PointeeSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> PointeeSizedTr for T
             where T: PointeeSized;

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
